--- a/code/todo/backend/Pipfile
+++ b/code/todo/backend/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "~=3.2.0"
 djangorestframework = "*"
 django-cors-headers = "*"
+environs = {extras = ["django"], version = "*"}
 
 [dev-packages]
 
