--- a/code/blogapi/Pipfile
+++ b/code/blogapi/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 django = "~=3.2.0"
 environs = {extras = ["django"], version = "*"}
+djangorestframework = "*"
 
 [dev-packages]
 
