--- a/code/blogapi/Pipfile
+++ b/code/blogapi/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "~=3.2.0"
 environs = {extras = ["django"], version = "*"}
 djangorestframework = "*"
+dj-rest-auth = "*"
 
 [dev-packages]
 
