Add black & isort config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,28 @@
+[tool.black]
+line-length = 119
+# include =
+exclude = '''
+/(
+    \.git
+  | __pycache__
+  | .pytest_cache
+  | .venv
+  | build
+  | dist
+  | code/library/books/migrations/*
+  | code/blogapi/posts/migrations/*
+  | code/todo/backend/todos/migrations/*
+  | ^.*\b(migrations)\b.*$
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+skip = ["*.gitignore"]
+extend_skip = ["*.md", "*.json"]
+line_length = 119
+
 [tool.poetry]
 name = "django_api"
 version = "0.1.0"
