--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,14 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+Django = "^4.0.4"
+djangorestframework = "^3.13.1"
+dj-rest-auth = "^2.2.4"
+django-allauth = "^0.50.0"
+PyYAML = "^6.0"
+uritemplate = "^4.1.1"
+drf-yasg = "^1.20.0"
+environs = {extras = ["django"], version = "^9.5.0"}
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
