--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ PyYAML = "^6.0"
 uritemplate = "^4.1.1"
 drf-yasg = "^1.20.0"
 environs = {extras = ["django"], version = "^9.5.0"}
-psycopg-binary = "^3.0.14"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
