--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pastebin-drf-api
 version = 0.0.1
-url = https://github.com/kevinbowen777/pastebin-drf-api
+url = https://github.com/kevinbowen777/django_api.git
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
-description = A pastebin code highlighting Web API using Django Rest Framework
+description = A blog Web API using Django Rest Framework
 long_description = file: README.md
 license = MIT
 classifiers =
@@ -22,7 +22,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Topic :: Internet :: WWW/HTTP
 project_urls =
-    Source = https://github.com/kevinbowen777/pastebin-drf-api/
+    Source = https://github.com/kevinbowen777/django_api.git
 
 [options]
 python_requires = >=3.8
@@ -41,9 +41,7 @@ exclude =
     __pycache__,
     build,
     .env,
-    code/library/books/migrations/*
-    code/blogapi/posts/migrations/*
-    code/todo/backend/todos/migrations/*
+    books/migrations/*
     dist,
     images/
 # https://www.flake8rules.com
