Install pytest & coverage. Resolves #15

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,30 @@ exclude = '''
   | ^.*\b(migrations)\b.*$
 )/
 '''
+[tool.coverage.paths]
+source = ["config", "posts"]
+
+[tool.coverage.run]
+branch = true
+source = ["config"]
+omit = [
+    "*/__init__.py",
+    "*manage.py",
+    "*settings*.py",
+    "*urls.py",
+    "*admin.py",
+    "*migrations/*",
+    "*tests/*",
+    "*test_*.py",
+    "*tests.py",
+    "*wsgi.py",
+    "*conftest.py",
+    "*/extra*",
+]
+
+[tool.coverage.report]
+show_missing = true
+
 
 [tool.isort]
 profile = "black"
@@ -39,6 +63,9 @@ uritemplate = "^4.1.1"
 drf-yasg = "^1.20.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
+coverage = {extras = ["toml"], version = "^6.4.1"}
+pytest-cov = "^3.0.0"
+pytest-django = "^4.5.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
@@ -46,6 +73,13 @@ black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+filterwarnings = [
+    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
