Install & configure Nox. Resolves #17

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ Django = "^4.0.4"
 djangorestframework = "^3.13.1"
 dj-rest-auth = "^2.2.4"
 django-allauth = "^0.50.0"
+django-extensions = "^3.1.5"
 PyYAML = "^6.0"
 uritemplate = "^4.1.1"
 drf-yasg = "^1.20.0"
@@ -75,10 +76,16 @@ isort = "^5.10.1"
 django-debug-toolbar = "^3.4.0"
 django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
-django-extensions = "^3.1.5"
 ipython = "^8.4.0"
 friendly = "^0.5.29"
 colorama = "^0.4.4"
+nox = "^2022.1.7"
+flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.6.22"
+flake8-docstrings = "^1.6.0"
+flake8-import-order = "^0.18.1"
+safety = "^1.10.3"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
