--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ exclude =
     __pycache__,
     build,
     .env,
-    books/migrations/*
+    posts/migrations/*
     dist,
     images/
 # https://www.flake8rules.com
