--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ coverage = {extras = ["toml"], version = "^6.4.1"}
 pytest-cov = "^3.0.0"
 pytest-django = "^4.5.2"
 whitenoise = "5.3.0"
+gunicorn = "~=20.1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
