--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^4.0.4"
+Django = "4.0.7"
 djangorestframework = "^3.13.1"
 dj-rest-auth = "^2.2.4"
 django-allauth = "^0.50.0"
@@ -69,9 +69,6 @@ uritemplate = "^4.1.1"
 drf-yasg = "^1.20.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
-coverage = {extras = ["toml"], version = "^6.4.1"}
-pytest-cov = "^3.0.0"
-pytest-django = "^4.5.2"
 whitenoise = "5.3.0"
 gunicorn = "~=20.1.0"
 
