--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ coverage = {extras = ["toml"], version = "^6.4.1"}
 pytest-cov = "^3.0.0"
 pytest = "^7.1.2"
 django-pytest = "^0.2.0"
+pytest-django = "^4.5.2"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
