--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ pytest-cov = "^3.0.0"
 pytest = "^7.1.2"
 django-pytest = "^0.2.0"
 pytest-django = "^4.5.2"
+factory-boy = "3.0.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
