--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,8 @@ environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 whitenoise = "5.3.0"
 gunicorn = "~=20.1.0"
+django-bootstrap4 = "^22.2"
+django-crispy-forms = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
