--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ whitenoise = "5.3.0"
 gunicorn = "~=20.1.0"
 django-bootstrap4 = "^22.2"
 django-crispy-forms = "^1.14.0"
+Pillow = "^9.2.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
