--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ gunicorn = "~=20.1.0"
 django-bootstrap4 = "^22.2"
 django-crispy-forms = "^1.14.0"
 Pillow = "^9.2.0"
+django-countries = "^7.3.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
