--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ pytest-django = "^4.5.2"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
+Sphinx = "^5.1.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
