--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "4.0.7"
+Django = "^4.1"
 djangorestframework = "^3.13.1"
 dj-rest-auth = "^2.2.4"
 django-allauth = "^0.50.0"
