--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = pastebin-drf-api
-version = 0.0.1
-url = https://github.com/kevinbowen777/django_api.git
+name = django-api-blog
+version = 0.1.0
+url = https://github.com/kevinbowen777/django-api-blog.git
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
 description = A blog Web API using Django Rest Framework
@@ -17,20 +17,20 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Internet :: WWW/HTTP
 project_urls =
-    Source = https://github.com/kevinbowen777/django_api.git
+    Source = https://github.com/kevinbowen777/django-api-blog.git
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.9
 packages = find:
 include_package_data = true
 zip_safe = false
 install_requires =
-    Django >= 4.0.3
+    Django >= 4.0.7
 
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
