--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ django-bootstrap4 = "^22.2"
 django-crispy-forms = "^1.14.0"
 Pillow = "^9.2.0"
 django-countries = "^7.3.2"
+cryptography = "38.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
