--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,12 @@ install_requires =
     Django >= 4.0.7
 
 [flake8]
+select = B,B9,BLK,C,E,F,I,S,W
+application-import-names = tests
+docstring-convention = google
+import-order-style = google
+max-complexity = 10
+max-line-length = 79
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 exclude =
     conftest.py
@@ -52,10 +58,18 @@ ignore =
     E203
     # import at top, avoid circular imports
     E402
+    E501
     # bare except
     E722
+    W503
 max-line-length = 119
 per-file-ignores =
+    accounts/tests/*:S101,S106
+    config/tests/*:S101,S106
+    pages/tests.py:S101,S106
+    pages/tests/*:S101,S106
+    posts/tests.py:S101,S106
+    posts/tests/*:S101,S106
     # __init__ exports names
     # app/crud/__init__.py: F401
     # app/schemas/__init__.py: F401
