--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ django-crispy-forms = "^1.14.0"
 Pillow = "^9.3.0"
 django-countries = "^7.3.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^2.18.1"
 black = "^22.3.0"
 flake8 = "^5.0.0"
