--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^4.1"
+Django = "4.1.4"
 djangorestframework = "^3.13.1"
 dj-rest-auth = "^2.2.4"
 django-allauth = "^0.52.0"
@@ -85,7 +85,7 @@ flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.6.22"
 flake8-docstrings = "^1.6.0"
-safety = "^2.3.5"
+safety = "2.3.5"
 coverage = {extras = ["toml"], version = "^7.0.0"}
 pytest-cov = "^4.0.0"
 pytest = "^7.1.2"
