--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "4.1.4"
+Django = "4.1.5"
 djangorestframework = "^3.13.1"
 dj-rest-auth = "^2.2.4"
 django-allauth = "^0.52.0"
@@ -91,7 +91,7 @@ pytest-django = "^4.5.2"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
-Sphinx = "^6.0.0"
+Sphinx = "6.0.0"
 flake8-import-order = "^0.18.2"
 
 [tool.pytest.ini_options]
