--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ pytest-django = "^4.5.2"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
-Sphinx = "6.0.1"
+Sphinx = "^6.1.0"
 flake8-import-order = "^0.18.2"
 
 [tool.pytest.ini_options]
