--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ ignore =
     E722
     W503
 per-file-ignores =
+    accounts/tests/factories.py:BLK100
     accounts/tests/*:S101,S106
     config/tests/*:S101,S106
     pages/tests.py:S101,S106
