--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,10 @@ psycopg2-binary = "^2.9.5"
 whitenoise = "6.3.0"
 gunicorn = "~=20.1.0"
 django-bootstrap4 = "^22.2"
-django-crispy-forms = "^1.14.0"
+django-crispy-forms = "^2.0"
 Pillow = "^9.3.0"
 django-countries = "^7.3.2"
+crispy-bootstrap4 = "^2022.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.0"
