--- a/requirements.txt
+++ b/requirements.txt
@@ -167,6 +167,9 @@ coreapi==2.3.3 ; python_version >= "3.10" and python_version < "4.0" \
 coreschema==0.0.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:5e6ef7bf38c1525d5e55a895934ab4273548629f16aed5c0a6caa74ebf45551f \
     --hash=sha256:9503506007d482ab0867ba14724b93c18a33b22b6d19fb419ef2d239dd4a1607
+crispy-bootstrap4==2022.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:5241ab1dc2188c95560aa786439bcbedec7416e6b0f5a52dded82380810367ec \
+    --hash=sha256:f18386c4d96180c1bb1212487d6e8f5a3dd1a9bb58d3032183973d4d130b55f9
 cryptography==39.0.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:0f8da300b5c8af9f98111ffd512910bc792b4c77392a9523624680f7956a99d4 \
     --hash=sha256:35f7c7d015d474f4011e859e93e789c87d21f6f4880ebdc29896a60403328f1f \
@@ -214,9 +217,9 @@ django-cache-url==3.4.4 ; python_version >= "3.10" and python_version < "4.0" \
 django-countries==7.5.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:22915d9b9403932b731622619940a54894a3eb0da9a374e7249c8fc453c122d7 \
     --hash=sha256:2df707aca7a5e677254bed116cf6021a136ebaccd5c2f46860abd6452bb45521
-django-crispy-forms==1.14.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:35887b8851a931374dd697207a8f56c57a9c5cb9dbf0b9fa54314da5666cea5b \
-    --hash=sha256:bc4d2037f6de602d39c0bc452ac3029d1f5d65e88458872cc4dbc01c3a400604
+django-crispy-forms==2.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:90193b068bf948d9c68449bc8260afed1a8e2afe11ee0bac8c4ebfaeb175b322 \
+    --hash=sha256:d1d4e585929058a9ab3b797666ea5b69320b9ba7937f9d146d32173246a6fd13
 django-extensions==3.2.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2a4f4d757be2563cd1ff7cfdf2e57468f5f931cc88b23cf82ca75717aae504a4 \
     --hash=sha256:421464be390289513f86cb5e18eb43e5dc1de8b4c27ba9faa3b91261b0d67e09
@@ -537,9 +540,9 @@ ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python
     --hash=sha256:efa08d63ef03d079dcae1dfe334f6c8847ba8b645d08df286358b1f5293d24ab \
     --hash=sha256:f01da5790e95815eb5a8a138508c01c758e5f5bc0ce4286c4f7028b8dd7ac3d0 \
     --hash=sha256:f34019dced51047d6f70cb9383b2ae2853b7fc4dce65129a5acd49f4f9256646
-setuptools==67.3.2 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:95f00380ef2ffa41d9bba85d95b27689d923c93dfbafed4aecd7cf988a25e012 \
-    --hash=sha256:bb6d8e508de562768f2027902929f8523932fcd1fb784e6d573d2cafac995a48
+setuptools==67.3.3 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:9d3de8591bd6f6522594406fa46a6418eabd0562dacb267f8556675762801514 \
+    --hash=sha256:ed4e75fafe103c79b692f217158ba87edf38d31004b9dbc1913debb48793c828
 soupsieve==2.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:49e5368c2cda80ee7e84da9dbe3e110b70a4575f196efb74e51b94549d921955 \
     --hash=sha256:e28dba9ca6c7c00173e34e4ba57448f0688bb681b7c5e8bf4971daafc093d69a
