--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^23.0.0"
 flake8-docstrings = "^1.6.0"
-safety = "2.3.4"
+safety = "2.4.0b1"
 coverage = {extras = ["toml"], version = "^7.0.0"}
 pytest-cov = "^4.0.0"
 pytest = "^7.1.2"
